Add jfr_allocation and jfr_memory tools
Allocation: rate (MB/s), top classes, top sites with framework-aware
categorization. Memory: heap + metaspace + code cache + thread stacks
+ NMT with container_fit verdict. Both wired into the agent, prompt
extended, dogfood fixtures refreshed.